--- a/package.json
+++ b/package.json
@@ -32,12 +32,11 @@
     "cssloader": "^1.1.1",
     "dat.gui": "^0.7.9",
     "express": "^4.18.2",
+    "jsdoc": "^4.0.2",
+    "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
-  },
-  "devDependencies": {
-    "sass": "^1.62.1"
   }
 }
