--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "webpack-cli": "^5.1.1",
     "webpack-dev-middleware": "^6.1.1",
     "webpack-dev-server": "^4.15.0",
+    "webpack-hot-middleware": "^2.25.3",
     "yaml": "^2.2.2"
   }
 }
